<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:background="@drawable/round_corner"
    android:tag="cards main container">

    <ImageView
        android:id="@+id/restaurant_image"
        android:padding="6dp"
        android:layout_margin="3dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/restaurant" />

    <RelativeLayout
        android:id="@+id/relative"
        android:padding="6dp"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/restaurant_name">
        </TextView>

        <!--        <TextView-->
        <!--            android:id="@+id/restaurant_address"-->
        <!--            android:textColor="@color/gray_text"-->
        <!--            android:layout_below="@+id/restaurant_name"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textSize="12sp"-->
        <!--            android:text="@string/restaurant_address">-->
        <!--        </TextView>-->

        <TextView
            android:id="@+id/restaurant_cuisine"
            android:textColor="@color/gray_text"
            android:layout_below="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/restaurant_cuisine"
            android:drawableLeft="@drawable/ic_baseline_fastfood_24">
        </TextView>



        <TextView
            android:id="@+id/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_below="@id/restaurant_cuisine"
            android:layout_marginRight="13dp"
            android:text="@string/budget"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_baseline_attach_money_24"/>

        <TextView
            android:id="@+id/delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_below="@id/budget"
            android:layout_marginRight="13dp"
            android:text="@string/delivery_fee"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_baseline_delivery_dining_24"/>

    </RelativeLayout>




</LinearLayout>


