<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="8dp"
    android:id="@+id/relative"
    android:background="@drawable/recycler_bg2">



    <ImageView
        android:id="@+id/food_image"
        android:layout_width="86dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popular1" />



        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/food_image"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:text="@string/food_name">
        </TextView>

        <TextView
            android:id="@+id/price"
            android:textColor="@color/gray_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/food_name"
            app:layout_constraintTop_toBottomOf="@+id/food_name"
            android:drawableLeft="@drawable/ic_baseline_attach_money_24"
            android:text="@string/price">
        </TextView>


    <TextView
        android:id="@+id/allergy"
        android:textColor="@color/gray_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:drawableLeft="@drawable/ic_baseline_no_food_24"
        android:text="@string/allergy">
    </TextView>






</androidx.constraintlayout.widget.ConstraintLayout>


