<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:background="@drawable/round_corner"
    android:tag="cards main container">

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="86dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popular1" />

    <RelativeLayout
        android:id="@+id/relative"
        android:padding="6dp"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/food_name">
        </TextView>



        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_below="@id/food_name"
            android:layout_marginRight="13dp"
            android:text="@string/price"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_baseline_attach_money_24"/>

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/number_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            app:backGroundColor="@color/white"
            android:minHeight="0dp"
            android:layout_alignParentRight="true"
            app:textColor="@color/black"
            android:textSize="18sp" />

                <Button
                    android:id="@+id/delete"
                    android:layout_below="@+id/number_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="1dp"
                    app:backgroundTint="@color/white"
                    android:text="@string/delete"
                    android:minHeight="0dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/red"
                    android:textSize="12sp" />

    </RelativeLayout>




</LinearLayout>


