<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".PaymentActivity"
    tools:ignore="MergeRootFrame">




    <TextView
        android:id="@+id/bankname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:text="@string/bank"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/bankimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bankname"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="3dp"
            android:src="@drawable/maybank" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="3dp"
            android:src="@drawable/cimblogo" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="3dp"
            android:src="@drawable/rhblogo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bank_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bankimage"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/card_num"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/card_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/colon1" />

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@+id/card_colon"
                android:layout_toRightOf="@+id/card_colon"
                android:autofillHints="@string/card_num"
                android:hint="@string/card_num"
                android:inputType="number" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/expire_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/exp_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/colon1" />

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@+id/exp_colon"
                android:layout_toRightOf="@+id/exp_colon"
                android:autofillHints="@string/expire_date"
                android:hint="@string/expire_date"
                android:inputType="number" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/ccv"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ccv_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/colon1" />

            <EditText
                android:id="@+id/ccv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@+id/ccv_colon"
                android:layout_toRightOf="@+id/ccv_colon"
                android:autofillHints="@string/ccv"
                android:hint="@string/ccv"
                android:inputType="number" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/payment_amount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/payment_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/colon1" />

            <TextView
                android:id="@+id/payment_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@+id/payment_colon"
                android:layout_toRightOf="@+id/payment_colon"
                />


        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/pay"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bank_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:textColor="@color/white"
        android:text="@string/pay"/>


</RelativeLayout>