<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddRestaurantActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:visibility="gone" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:background="@drawable/border_cardview">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/address"
                android:src="@drawable/ic_baseline_location_on_24" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_address"
                android:hint="Enter address"
                android:paddingStart="9dp"
                android:paddingLeft="9dp"
                android:paddingEnd="9dp"
                android:paddingRight="9dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:background="@drawable/border_cardview">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/restaurant_name"
                android:src="@drawable/ic_baseline_restaurant_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view1"
                android:paddingStart="9dp"
                android:paddingLeft="9dp"
                android:paddingEnd="9dp"
                android:paddingRight="9dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
               ></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:background="@drawable/border_cardview">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/delivery_fee"
                android:src="@drawable/ic_baseline_delivery_dining_24" />


            <EditText
                android:id="@+id/delivery_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_fee"
                android:inputType="numberDecimal"
                android:textSize="14sp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:background="@drawable/border_cardview">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/cuisine"
                android:src="@drawable/ic_baseline_fastfood_24" />

            <Spinner
                android:id="@+id/cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                />

        </LinearLayout>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/location_upload_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add"
            android:background="#DF556F"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>


    </LinearLayout>


</RelativeLayout>
